# falling_sand

./: .gitignore  Cargo.toml  LICENSE-Apache  LICENSE-MIT  README.md  rustfmt.toml
assets/shader/default/: frag.glsl  vert.glsl
assets/shader/instance/: vert.glsl
crates/glad-gl/: Cargo.toml
crates/glad-gl/src/: gl.rs  lib.rs
data/: appdata.ron  color_palette.ron
src/: events.rs  main.rs  plugins.rs  resources.rs  systems.rs  utils.rs
src/graphics/: camera.rs  color.rs  material.rs  mesh.rs  mod.rs  shader.rs  transform.rs  window.rs
src/graphics/mesh/: attribute.rs  instance.rs  vertex.rs
src/io/: color.rs  mod.rs  settings.rs
src/physic_world/: events.rs  mod.rs  particle.rs  resources.rs  systems.rs  world.rs
src/sandbox/: brush.rs  cell.rs  mod.rs  sandbox.rs
src/ui/: mod.rs  resources.rs  systems.rs
src/ui/ui_components/: fps_display.rs  mod.rs
src/utils/: color.rs  mod.rs  vec.rs
