[package]
name = "falling_sand"
version = "0.1.0-dev-snapshot"
edition = "2021"
authors = ["Konstantin Opora <konstantinopora@gmail.com>"]
rust-version = "1.81.0"
default-run = "run"

[[bin]]
name = "run"
path = "src/main.rs"

[dependencies.bevy]
version = "0.14.*"
features = ["dynamic_linking"] # remove this line for release builds

[dependencies]
ron = "0.8.*"
serde = { version = "1.*", features = ["derive"] }
rand = "0.8.*"


[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3
